chore(cache): add redis dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,8 @@ services:
       - './src/main/resources/sql/initialize.sql:/docker-entrypoint-initdb.d/initialize.sql'
     ports:
       - '5432:5432'
+  cache:
+    container_name: LpTasksRedis
+    image: redis:7.4.0
+    ports:
+      - '6379:6379'
